# yebira

./: .gitignore  Cargo.toml  README  build.rs
src/: main.rs  note.rs  notebook.rs  notebook_tree.rs  yebira.glade
src/res/: resources.xml
src/res/gtk/: yebira.ui
